nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix
  labels:
    app: ngnix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngnix
  strategy: {}
  template:
    metadata:
      labels:
        app: ngnix
    spec:
      containers:
      - name: ngnix
        image: nginx:1.21
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html  
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: app-config
